Added artist widget for 2014
Noted that call for artist deadline has passed

--- a/_data/topmenu.yml
+++ b/_data/topmenu.yml
@@ -6,9 +6,9 @@
   id: info
   href: /info/index.html
 
-- title: 2013 Awards
-  id: awards
-  href: /info/awards2013.html
+- title: Artists
+  id: artists
+  href: /info/artists2014.html
 
 - title: News
   id: news
