--- a/_data/infomenu.yml
+++ b/_data/infomenu.yml
@@ -18,7 +18,7 @@
   id: directions
   href: /info/directions.html
 
-- title: Press Release (2013)
+- title: Press Kit
   id: press
   href: /info/press.html
 
